# humanoid_common

./: .gitignore  CMakeLists.txt  README.md  package.xml  test.yaml
cmake/: FetchThirdParty.cmake  FindCnpy.cmake
example/behavior_manager/: config_example.yaml  test_behavior.cpp
example/robot_base/: config_example.yaml  test_robot_base.cpp
example/transport_executor/: config_example.yaml  test_transport_executor.cpp
include/: behavior_manager.h  robot_base.h  transport_executor.h
src/behavior_manager/: README.md  behavior_fsm.cpp  behavior_fsm.h  behavior_manager.cpp  behavior_state.h  motion_tracking_helper.cpp  motion_tracking_helper.h  state_factory.h
src/behavior_manager/states/: state_damp.cpp  state_power_off.cpp  state_rl.cpp  state_safety.cpp  state_zero.cpp
src/robot_base/: README.md  robot_base.cpp  thread_utils.cpp
src/runtime/: control_runtime.cpp  control_sim2sim_runtime.cpp  driver_runtime.cpp  hmi_runtime.cpp
src/transport/: README.md
src/transport/shm/: shm_transport.cpp  shm_transport.h
src/transport/transport_executor/: transport_executor.cpp  transport_packet.h  transport_shm_impl.cpp  transport_shm_impl.h  transport_udp_impl.cpp  transport_udp_impl.h
src/transport/udp/: udp_transport.cpp  udp_transport.h
tests/: error_path.sh  functional.sh
