<?xml version="1.0"?>
<package format="3">
  <name>humanoid_common</name>
  <maintainer email="robot_team@spacemit.com">robot_team</maintainer>
  <version>0.1.0</version>
  <description>Humanoid robot shared layer: robot_base, behavior_manager, transport, and runtime processes</description>
  <depend>rl</depend>
  <system_depend check="pkg-config --exists eigen3">libeigen3-dev</system_depend>
  <system_depend check="pkg-config --exists yaml-cpp">libyaml-cpp-dev</system_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
